[package]
name = "pymacjoule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymacjoule"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
pyo3 = { version = "0.23.4", features = ["extension-module"] }
core-foundation = "0.10.0"
libc = "0.2.168"
num-traits = "0.2.19"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.133"